--- a/Web Extension/manifest.json
+++ b/Web Extension/manifest.json
@@ -13,7 +13,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["popup.js"]
+      "js": ["content.js"]
     }
   ]
 }
